fix spacing on match details card

--- a/src/components/styling/MatchItem.scss
+++ b/src/components/styling/MatchItem.scss
@@ -62,7 +62,7 @@
       font-size: 1.25rem;
       width: 40%;
 
-      top: 30%;
+      top: 25%;
       left: 7%;
 
       text-align: left;
